--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=1acca35a7103ad4d28b54ff66705baa2
 #
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://app: parv@localhost:3306/mvc?serverVersion=10.6.16-MariaDB-0ubuntu0.22.04.1"
+# DATABASE_URL="mysql://parv:password@localhost:3306/mvc?serverVersion=mariadb-10.6.16"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
